# hermes

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
example/: packages.toml
src/: app.yml  cli.yml  config.rs  error.rs  event_output.rs  git.rs  hermes.rs  main.rs  output.rs  tree.rs
src/config/: git.rs  github.rs  mod.rs  package.rs  script.rs
src/download/: git.rs  mod.rs  remote.rs
src/inject/: dependency.rs  mod.rs
src/output/: mod.rs
