[package]
name = "smoke"
version = "0.1.0"
authors = ["0x20F <alexhexan22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.13"
toml = "0.4"
reqwest = { version = "0.10", features = [ "blocking" ] }
clap = { git = "https://github.com/clap-rs/clap/" }
indexmap = { version = "1.3", features = [ "serde-1" ] }
paris = { version = "1.4", features = [ "macros", "no_logger" ] }
serde = { version = "1.0.102", features = [ "derive" ] }
