[package]
name = "smoke"
version = "0.1.0"
authors = ["0x20F <alexhexan22@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.4"
git2 = "0.13"
key-list = "1"
shells = "0.2"
remove_dir_all = "0.5"
serde = { version = "1.0.102", features = [ "derive" ] }
reqwest = { version = "0.10", features = [ "blocking" ] }
paris = { version = "1.4", features = [ "macros", "no_logger" ] }
clap = { git = "https://github.com/clap-rs/clap/", features = [ "yaml" ]}